NS 19 - Add ApiResult Dto

--- a/API/Nutrishare.API.USDA/Nutrishare.API.USDA.csproj
+++ b/API/Nutrishare.API.USDA/Nutrishare.API.USDA.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Nutrishare.DTO\Nutrishare.DTO.csproj" />
     <ProjectReference Include="..\Nutrishare.USDA.DTO\Nutrishare.USDA.DTO.csproj" />
   </ItemGroup>
 
