--- a/Angular/Nutrishare/package.json
+++ b/Angular/Nutrishare/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngrx/component-store": "^14.3.3",
+    "@ngrx/store": "^14.3.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
